# dynamic-memory-allocation-optimization

./: .clang-format  .gitignore  CMakeLists.txt
bench/: CMakeLists.txt
bench/placeholder/: main.cpp
demo/: CMakeLists.txt  main.cpp
demo/allocator/: main.cpp
demo/basic/: main.cpp
src/: dmao.hpp  placeholder.cpp
src/allocator/: allocator-params.hpp  allocator.hpp
test/: CMakeLists.txt
test/placeholder/: main.cpp
